# OpenScanlate

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
openscanlate/: __init__.py  cli.py  inpaint.py  ocr.py  translate.py  typeset.py
